# novastar53.github.io

./: .buildinfo  .gitignore  09-jax-mnist-fc-batchnorm.html  11-flax-cifar10-fc-dropout.html  CLAUDE.md  CNAME  LICENSE  Makefile  README.md  WIP_how-positional-embeddings-work-part-2.html  WIP_how-self-attention-works.html  WIP_how_layernorm_works.html  WIP_pallas-flash-attn.html  WIP_rope-embeddings.html  WIP_why-tokenize.html  about.html  freeze_notebook.py  generate_sidebar.py  genindex.html  how-batchnorm-works-part-2.html  how-batchnorm-works.html  how-dropout-works.html  how-mixture-of-experts-works-part-1.html  how-mixture-of-experts-works-part-2.html  how-mixture-of-experts-works.html  how-positional-embeddings-work-part-2.html  how-positional-embeddings-work.html  how-positional-embeddings.work.html  how-residual-connections-work.html  how-self-attention-works.html  how0-residual-connections-work.html  how_layernorm_works.html  how_mixture_of_experts_works.html  how_residual_connections_work.html  index.html  intro.html  markdown-notebooks.html  markdown.html  nadaray-watson.html  nadaraya-watson-kernel-regression.html  (+10 more)
Starburst_Blog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
_sources/: 09-jax-mnist-fc-batchnorm.ipynb  11-flax-cifar10-fc-dropout.ipynb  WIP_how-self-attention-works.ipynb  WIP_pallas-flash-attn.ipynb  how-batchnorm-works-part-2.ipynb  how-batchnorm-works.ipynb  how-dropout-works.ipynb  how-mixture-of-experts-works-part-1.ipynb  how-mixture-of-experts-works-part-2.ipynb  how-mixture-of-experts-works.ipynb  how-positional-embeddings-work.ipynb  (+11 more)
(+71 files in other folders)
