[project]
name = "Starburst-Blog"
version = "0.1.0"
description = "An AI Blog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter-book>=1.0.2",
    "furo>=2024.8.6",
    "manim-slides[sphinx-directive]>=5.1.7",
    "torch>=2.4.1",
    "matplotlib>=3.9.2",
    "manim>=0.18.1"
]
