[project]
name = "Starburst-Blog"
version = "0.1.0"
description = "An AI Blog"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter-book>=1.0.2",
    "furo>=2024.8.6",
    "manim-slides[sphinx-directive]>=5.1.7",
    "torch>=2.4.1",
    "matplotlib>=3.9.2",
    "manim>=0.18.1",
    "tensorflow-datasets>=4.9.6",
    "jax>=0.4.34",
    "tensorflow>=2.17.0",
    "flax>=0.9.0",
    "optax>=0.2.3",
    "insegel>=1.3.1",
    "sphinx-better-theme>=0.1.5",
    "sphinx-nameko-theme>=0.0.3",
    "sphinx>=7.4.7",
    "jupyter>=1.1.1",
    "torchvision>=0.19.1",
    "protobuf<4.00",
    "sphinx-comments>=0.0.3",
]
